--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -405,16 +405,16 @@ legend {
   *margin-left: -7px;
 }
 
-.clearfix, .comment-content, .wrapper, article, .contact-form, .looper {
+.clearfix, .comment-content, .wrapper, article, .contact-form, .looper, .reviews-container, .reviews-container .looper, .container--loop .looper--articles {
   *zoom: 1;
 }
 
-.clearfix:before, .comment-content:before, .wrapper:before, article:before, .contact-form:before, .looper:before {
+.clearfix:before, .comment-content:before, .wrapper:before, article:before, .contact-form:before, .looper:before, .reviews-container:before, .reviews-container .looper:before, .container--loop .looper--articles:before {
   display: table;
   content: '';
 }
 
-.clearfix:after, .comment-content:after, .wrapper:after, article:after, .contact-form:after, .looper:after {
+.clearfix:after, .comment-content:after, .wrapper:after, article:after, .contact-form:after, .looper:after, .reviews-container:after, .reviews-container .looper:after, .container--loop .looper--articles:after {
   display: table;
   clear: both;
   content: '';
@@ -2094,7 +2094,7 @@ hr {
   }
 }
 
-.clearfix:before, .comment-content:before, .wrapper:before, article:before, .contact-form:before, .looper:before, .clearfix:after, .comment-content:after, .wrapper:after, article:after, .contact-form:after, .looper:after {
+.clearfix:before, .comment-content:before, .wrapper:before, article:before, .contact-form:before, .looper:before, .reviews-container:before, .reviews-container .looper:before, .container--loop .looper--articles:before, .clearfix:after, .comment-content:after, .wrapper:after, article:after, .contact-form:after, .looper:after, .reviews-container:after, .reviews-container .looper:after, .container--loop .looper--articles:after {
   display: table;
   content: ' ';
 }
@@ -2114,7 +2114,7 @@ hr {
   content: ' ';
 }
 
-.clearfix:after, .comment-content:after, .wrapper:after, article:after, .contact-form:after, .looper:after,
+.clearfix:after, .comment-content:after, .wrapper:after, article:after, .contact-form:after, .looper:after, .reviews-container:after, .reviews-container .looper:after, .container--loop .looper--articles:after,
 .container:after,
 .container-fluid:after,
 .row:after {
@@ -3176,7 +3176,7 @@ body.modaled .embed-container {
   display: none;
 }
 
-body.category .headnav, body.single .headnav {
+body.category .headnav, body.page-template-page-weddings .headnav, body.single .headnav {
   display: block;
 }
 
@@ -3523,8 +3523,8 @@ article .embed-container embed {
 }
 
 .row .row--nomargin {
-  margin-left: 0;
   margin-right: 0;
+  margin-left: 0;
 }
 
 .looper {
@@ -3579,10 +3579,247 @@ article .embed-container embed {
   font-style: italic;
 }
 
+.reviews-container {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  align-items: stretch;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.reviews-container .reviews-container-delimetr {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 80px;
+  align-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.reviews-container .reviews-container-delimetr .looper:nth-child(1) {
+  order: 2;
+}
+
+.reviews-container .reviews-container-delimetr .looper:nth-child(2) {
+  order: 1;
+}
+
+.reviews-container .looper .feature-img {
+  display: block;
+}
+
+.reviews-container .looper .feature-img img {
+  width: 100%;
+}
+
+.reviews-container .looper .inner-title a {
+  font-size: 23px;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.reviews-container .looper .inner-title .date {
+  font-size: 18px;
+  font-style: italic;
+  margin-bottom: 20px;
+  color: #565656;
+}
+
+.reviews-container .looper .inner-title .content-block,
+.reviews-container .looper .inner-title blockquote,
+.reviews-container .looper .inner-title .quote-block {
+  width: 400px;
+}
+
+.reviews-container .looper .inner-title .content-block {
+  font-size: 18px;
+  margin-bottom: 16px;
+  color: #a3a3a3;
+}
+
+.reviews-container .looper .inner-title blockquote {
+  font-size: 31px;
+  font-style: italic;
+  margin-bottom: 25px;
+  padding-left: 25px;
+  text-align: right;
+  color: #323232;
+}
+
+.reviews-container .looper .inner-title .quote-block {
+  font-size: 18px;
+  color: #a3a3a3;
+}
+
+.reviews-container .looper.looper-0 {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.reviews-container .looper.looper-0 .feature-img {
+  float: left;
+  width: 37%;
+  margin-right: 60px;
+}
+
+.reviews-container .looper.looper-1 {
+  width: 59%;
+}
+
+.reviews-container .looper.looper-1 .feature-img {
+  float: right;
+  width: 350px;
+  margin-right: 100px;
+  margin-left: 65px;
+  align-self: flex-end;
+}
+
+.reviews-container .looper.looper-1 blockquote {
+  width: auto;
+}
+
+.reviews-container .looper.looper-1 .quote-block {
+  display: none;
+}
+
+.reviews-container .looper.looper-2 {
+  width: 41%;
+}
+
+.reviews-container .looper.looper-2 .feature-img,
+.reviews-container .looper.looper-2 .inner-title {
+  padding-top: 300px;
+}
+
+.reviews-container .looper.looper-2 .feature-img {
+  float: left;
+  width: 240px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  margin-left: 70px;
+}
+
+.reviews-container .looper.looper-2 blockquote {
+  padding-right: 180px;
+}
+
+.reviews-container .looper.looper-2 .quote-block {
+  padding-right: 180px;
+}
+
+.reviews-container .looper.looper-2 .content-block {
+  display: none;
+}
+
+.reviews-container .looper.looper-3 {
+  width: 100%;
+  margin-bottom: 300px;
+  padding-left: 40%;
+}
+
+.reviews-container .looper.looper-3 .inner-title {
+  display: block;
+}
+
+.reviews-container .looper.looper-3 .feature-img {
+  float: right;
+  width: 56%;
+  margin-left: 60px;
+}
+
+.inner-title a {
+  text-transform: uppercase;
+}
+
+.container--loop .feature-img {
+  display: block;
+}
+
+.container--loop .looper-container-delimetr {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0;
+  align-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.container--loop .looper-container-delimetr .looper--articles {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-bottom: 0;
+  align-content: stretch;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+
+.container--loop .looper-container-delimetr .looper--articles:nth-child(1) {
+  order: 2;
+}
+
+.container--loop .looper-container-delimetr .looper--articles:nth-child(2) {
+  order: 1;
+}
+
+.container--loop .looper-container-delimetr .looper--articles .inner-title {
+  display: block;
+  padding-top: 70px;
+}
+
+.container--loop .looper--articles-0 .feature-img {
+  float: left;
+  margin-right: 60px;
+}
+
+.container--loop .looper--articles-2 {
+  padding-top: 480px;
+}
+
+.container--loop .looper--articles-2 .inner-title {
+  height: auto !important;
+  padding-bottom: 230px;
+}
+
+.container--loop .looper--articles-3 {
+  padding-left: 50%;
+}
+
+.container--loop .looper--articles-3 .inner-title {
+  display: block;
+  height: auto !important;
+  padding-top: 70px;
+  padding-right: 18%;
+  text-align: right;
+}
+
+.container--loop .looper--articles-4 .feature-img {
+  float: left;
+  margin-right: 60px;
+  margin-left: 17%;
+}
+
 .pagination {
   display: none;
   padding: 10px 0;
   text-align: center;
+}
+
+.video-background {
+  width: 100vw;
+  height: 100vh;
+}
+
+.video-background iframe {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 footer {
