--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -50,6 +50,7 @@ body {
     }
   }
   &.category,
+  &.page-template-page-weddings,
   &.single {
     .headnav {
       display: block;
@@ -413,8 +414,8 @@ article {
 }
 .row {
   .row--nomargin {
-    margin-left: 0;
     margin-right: 0;
+    margin-left: 0;
   }
 }
 .looper {
@@ -467,13 +468,255 @@ article {
     }
   }
 }
+.reviews-container {
+  display: flex;
+  flex-direction: column;
 
+  align-content: flex-start;
+  align-items: stretch;
+  @extend .clearfix;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  .reviews-container-delimetr {
+    display: flex;
+    flex-direction: row;
+
+    margin-bottom: 80px;
+
+    align-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    .looper {
+      &:nth-child(1) {
+        order: 2;
+      }
+      &:nth-child(2) {
+        order: 1;
+      }
+    }
+  }
+  .looper {
+    @extend .clearfix;
+    .feature-img {
+      display: block;
+      img {
+        width: 100%;
+      }
+    }
+    .inner-title {
+      a {
+        font-size: 23px;
+
+        margin-bottom: 0;
+
+        text-transform: uppercase;
+
+        color: #000000;
+      }
+      .date {
+        font-size: 18px;
+        font-style: italic;
+
+        margin-bottom: 20px;
+
+        color: #565656;
+      }
+      .content-block,
+      blockquote,
+      .quote-block {
+        width: 400px;
+      }
+      .content-block {
+        font-size: 18px;
+
+        margin-bottom: 16px;
+
+        color: #a3a3a3;
+      }
+      blockquote {
+        font-size: 31px;
+        font-style: italic;
+
+        margin-bottom: 25px;
+        padding-left: 25px;
+
+        text-align: right;
+
+        color: #323232;
+      }
+      .quote-block {
+        font-size: 18px;
+
+        color: #a3a3a3;
+      }
+    }
+    &.looper-0 {
+      width: 100%;
+      margin-bottom: 10px;
+      .feature-img {
+        float: left;
+
+        width: 37%;
+        margin-right: 60px;
+      }
+    }
+    &.looper-1 {
+      width: 59%;
+      .feature-img {
+        float: right;
+
+        width: 350px;
+        margin-right: 100px;
+        margin-left: 65px;
+
+        align-self: flex-end;
+      }
+      blockquote {
+        width: auto;
+      }
+      .quote-block {
+        display: none;
+      }
+    }
+    &.looper-2 {
+      width: 41%;
+      .feature-img,
+      .inner-title {
+        padding-top: 300px;
+      }
+      .feature-img {
+        float: left;
+
+        width: 240px;
+        margin-right: 40px;
+        margin-bottom: 40px;
+        margin-left: 70px;
+      }
+      blockquote {
+        padding-right: 180px;
+      }
+      .quote-block {
+        padding-right: 180px;
+      }
+      .content-block {
+        display: none;
+      }
+    }
+    &.looper-3 {
+      width: 100%;
+      margin-bottom: 300px;
+      padding-left: 40%;
+      .inner-title {
+        display: block;
+      }
+      .feature-img {
+        float: right;
+
+        width: 56%;
+        margin-left: 60px;
+      }
+    }
+  }
+}
+.inner-title {
+  a {
+    text-transform: uppercase;
+  }
+}
+.container--loop {
+  .feature-img {
+    display: block;
+  }
+  .looper--articles {
+    @extend .clearfix;
+  }
+  .looper-container-delimetr {
+    display: flex;
+    flex-direction: row;
+
+    margin-bottom: 0;
+
+    align-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    .looper--articles {
+      display: flex;
+      flex-direction: column;
+
+      width: 50%;
+      margin-bottom: 0;
+
+      align-content: stretch;
+      align-items: center;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      &:nth-child(1) {
+        order: 2;
+      }
+      &:nth-child(2) {
+        order: 1;
+      }
+      .inner-title {
+        display: block;
+
+        padding-top: 70px;
+      }
+    }
+  }
+  .looper--articles-0 {
+    .feature-img {
+      float: left;
+
+      margin-right: 60px;
+    }
+  }
+  .looper--articles-2 {
+    padding-top: 480px;
+    .inner-title {
+      height: auto !important;
+      padding-bottom: 230px;
+    }
+  }
+  .looper--articles-3 {
+    padding-left: 50%;
+    .inner-title {
+      display: block;
+
+      height: auto !important;
+      padding-top: 70px;
+      padding-right: 18%;
+
+      text-align: right;
+    }
+  }
+  .looper--articles-4 {
+    .feature-img {
+      float: left;
+
+      margin-right: 60px;
+      margin-left: 17%;
+    }
+  }
+}
 .pagination {
   display: none;
 
   padding: 10px 0;
 
   text-align: center;
+}
+.video-background {
+  width: 100vw;
+  height: 100vh;
+  iframe {
+    display: block;
+
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+  }
 }
 
 footer {
