--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -660,8 +660,8 @@ article {
   }
 }
 .container--loop {
-  padding-left: 15px;
   padding-right: 15px;
+  padding-left: 15px;
   .feature-img {
     display: block;
   }
@@ -770,54 +770,6 @@ article {
 // Positioning
 
 
-.background-video-container {
-  z-index: 1;
-
-  pointer-events: none;
-
-  @include position(absolute, 0rem 0rem 0rem 0rem);
-  video {
-    width: auto;
-    min-width: 100%;
-    height: auto;
-    min-height: 100%;
-
-    transform: translateX(-50%) translateY(-50%);
-    /* background-image: url('*** Poster image goes here ***'); */
-
-    background-size: cover;
-
-    @include position(absolute, 50% 0rem 0rem 50%);
-  }
-}
-
-.background-video-overlay {
-  z-index: 20;
-
-  height: 100vh;
-
-  color: blue;
-
-  @include position(absolute, 0rem 0rem 0rem 0rem);
-  h1 {
-    font-size: 24px;
-    line-height: 100px;
-
-    width: 400px;
-    height: 100px;
-    margin: -50px 0 0 -200px;
-
-    text-align: center;
-
-    color: #121212;
-    border-radius: 4px;
-    background-color: rgba(#ffffff, .8);
-
-    @include position(50% auto auto 50%);
-  }
-}
-
-
 footer {
   height: $footer;
   margin: $footer_margin auto 0;
@@ -845,6 +797,55 @@ footer {
       }
     }
   }
+}
+
+body { margin: 0; background: #000;}
+video {
+position: fixed;
+top: 50%;
+left: 50%;
+min-width: 100%;
+min-height: 100%;
+width: auto;
+height: auto;
+z-index: -100;
+-moz-transform: translateX(-50%) translateY(-50%);
+-ms-transform: translateX(-50%) translateY(-50%);
+-webkit-transform: translateX(-50%) translateY(-50%);
+transform: translateX(-50%) translateY(-50%);
+background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg') no-repeat; background-size: cover;  -webkit-transition: 1s opacity; transition: 1s opacity; }
+div { font-family: Agenda-Light, Agenda Light, Agenda, Arial Narrow, sans-serif;
+font-weight: 100; background: rgba(0,0,0,0.3); color: white; padding: 2rem; width: 33%; margin: 2rem; float: right; font-size: 1.2rem; }
+h1 { font-size: 3rem; text-transform: uppercase; margin-top: 0; letter-spacing: .3rem; }
+a { display: inline-block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5);
+padding: .5rem; -webkit-transition: .6s background; transition: .6s background; }
+a:hover { background: rgba(0,0,0,0.9); }
+.stopfade { opacity: .5; }
+#polina button {
+  display: block;
+  width: 80%;
+  padding: .4rem;
+  border: none;
+  margin: 1rem auto;
+  font-size: 1.3rem;
+  background: rgba(255,255,255,0.23);
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  -webkit-transition: .3s background;
+  transition: .3s background;
+}
+#polina button:hover {
+   background: rgba(0,0,0,0.5);
+}
+
+@media screen and (max-width: 500px) {
+  div{width:70%;}
+}
+@media all and (max-device-width: 800px) {
+  body { background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg") #000 no-repeat center center fixed; background-size: cover; }
+  #bgvid, #polina button { display: none; }
+  div{width:70%;}
 }
 
 @media (max-width: 998px) {
